add sign up button to login page
Changes to be committed:
	modified:   client/src/index.css
	modified:   client/src/pages/auth/Login.tsx

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,5 +3,6 @@
 @tailwind utilities;
 
 .custom-hover:hover {
-  @apply text-slate-900 !important; 
+  @apply text-slate-100 !important; 
+  @apply bg-blue-600 !important;
 }
